# happy-lines

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md  argparser.c  happy-lines.c  tui.c
.cache/clangd/index/: argparser.c.01743F138FA314CD.idx  argparser.h.CDF8BFA28299110E.idx  contributor.c.CDBE152E57C04DA3.idx  contributor.h.391C84BD00936919.idx  counter.c.7EA23E26DDDDD59E.idx  counter.h.8FDC5F03A2FDD599.idx  main.c.BD40C08DFF1AECF4.idx  platform.c.037EAD7EF636F955.idx  platform.h.256B37DD8A90FCC6.idx
include/: argparser.h  contributor.h  counter.h  hash_map.h  platform.h
src/: argparser.c  contributor.c  counter.c  hash_map.c  main.c  platform.c
